@startuml

class Server {
	+ TCPPortMatch int
	+ TCPPortInfo int
	+ MaxPlayers int
	+ PointsToWin int
	+ InfoServerEnabled bool
    + Run()
}

class MatchServer {
    - port int
    - pointsToWin int
    - matchManager *MatchManager
    + MatchServer()
    + Run()
}

class InfoServer {
    - port int
    - matchServer* MatchServer
    + InfoServer()
    + Run()
    - handleVersionRequest()
    - sendServerInfo()
}

Server *--> MatchServer
Server *--> InfoServer

InfoServer o--> MatchServer

@enduml
